force-app/main/default/objects/Support_Draft_Setting__mdt/Support_Draft_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Tunable settings for the support email drafting system (retrieval thresholds, and later model/prompt config). Editable without a code deploy. Read via getInstance('Default').</description>
    <label>Support Draft Setting</label>
    <pluralLabel>Support Draft Settings</pluralLabel>
</CustomObject>