force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Draft_Call_Offer_Text__c.field-meta.xml
<CustomField>
    <fullName>Draft_Call_Offer_Text__c</fullName>
    <description>Fixed call-offer / availability blurb appended to every drafted reply (with the owner signature and any documentation links) after generation. There is no calendar integration and a case owner's real free/busy is not in Salesforce, so state stable hours here. Edit without a code deploy. Blank falls back to the class default (SupportDraftingService.DEFAULT_CALL_OFFER).</description>
    <label>Draft Call Offer Text</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>