force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Draft_Claim_Check_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Draft_Claim_Check_Enabled__c</fullName>
    <description>Master switch for the deterministic claim-level fabrication check (no model call). Default true: every concrete verifiable specific in the draft (API names like SSIC_Policy__c, CamelCase identifiers, code/merge syntax, version numbers) must appear in a cited source or the customer's own case text, else the draft is blocked (NO_DRAFT_UNGROUNDED). Catches invented specifics that reuse source vocabulary and so pass the aggregate-overlap grounding check.</description>
    <label>Draft Claim Check Enabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>