force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Draft_Claim_Check_Max_Unverified__c.field-meta.xml
<CustomField>
    <fullName>Draft_Claim_Check_Max_Unverified__c</fullName>
    <description>Number of unverifiable concrete specifics tolerated before the claim check blocks a draft. Default 0 (zero-tolerance: any invented specific declines), per the hard "zero hallucinated specifics" requirement. Exists only to loosen deterministically if a benign false-decline pattern emerges in eval; keep at 0 unless a specific over-block is observed.</description>
    <label>Draft Claim Check Max Unverified</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>