force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Draft_Gate_Mode__c.field-meta.xml
<CustomField>
    <fullName>Draft_Gate_Mode__c</fullName>
    <description>How the three verification gates (grounding, claim check, LLM verify) treat a failed would-be draft. 'block' (the code default when blank) = failure returns a NO_DRAFT_* outcome (fail-closed). 'demote' = failure stamps a [NEEDS REVIEW] warning at the top of AI Draft Notes, forces LOW confidence, and still produces a DRAFTED outcome for human review — drafts are never auto-sent, so demote trades reviewer attention for coverage.</description>
    <label>Draft Gate Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>