force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Draft_Grounding_Block_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Draft_Grounding_Block_Ratio__c</fullName>
    <description>Grounding block threshold (0-1): when the fraction of supported draft sentences falls below this, the draft is blocked entirely (NO_DRAFT_UNGROUNDED) rather than shown to a reviewer. Above it but below 1.0, the draft is kept but flagged and capped at LOW confidence. Default 0.34 in code.</description>
    <label>Draft Grounding Block Ratio</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>