force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Draft_Grounding_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Draft_Grounding_Enabled__c</fullName>
    <description>Master switch for the deterministic sentence-overlap grounding/faithfulness check on a generated draft. Default true: a draft whose claims do not trace to the cited sources is blocked (NO_DRAFT_UNGROUNDED) or flagged. This is model-independent lexical overlap, not semantic entailment.</description>
    <label>Draft Grounding Enabled</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>