force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Draft_Grounding_Min_Overlap__c.field-meta.xml
<CustomField>
    <fullName>Draft_Grounding_Min_Overlap__c</fullName>
    <description>Per-sentence content-token overlap (0-1) at/above which a draft sentence counts as supported by the cited sources. Lower = more lenient (fewer false positives on legitimate paraphrase). Default 0.5 in code.</description>
    <label>Draft Grounding Min Overlap</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>