force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Draft_Max_Retries__c.field-meta.xml
<CustomField>
    <fullName>Draft_Max_Retries__c</fullName>
    <description>How many times drafting re-issues the generation call when it returns empty or throws (transient failures). 0 = single attempt, no retry. Synchronous Apex cannot sleep without burning CPU, so retries are bounded immediate re-issue. A parseable response (including a deliberate decline) is never retried. Default 2 in code.</description>
    <label>Draft Max Retries</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>