force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Draft_Max_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Draft_Max_Solutions__c</fullName>
    <description>Max retrieved solutions fed into a single draft prompt (token-budget cap). One generation per case; this bounds prompt size.</description>
    <label>Draft Max Solutions</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>