force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Draft_Min_Top_Score__c.field-meta.xml
<CustomField>
    <fullName>Draft_Min_Top_Score__c</fullName>
    <description>Retrieval-score floor for drafting (0-1). If the top retrieved solution scores below this, drafting is refused (NO_DRAFT_LOW_CONFIDENCE) before any model call, regardless of the model's self-reported confidence. Stops weak matches drafting on model optimism alone. Default 0.45 in code.</description>
    <label>Draft Min Top Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>