force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Draft_Prompt_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Draft_Prompt_Instructions__c</fullName>
    <description>Versioned drafting instructions (the system prompt for generation). Iterate the prompt here without a code deploy (checklist section 10, prompt versioning). Blank falls back to the class default prompt.</description>
    <label>Draft Prompt Instructions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>