force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Draft_Solution_Char_Limit__c.field-meta.xml
<CustomField>
    <fullName>Draft_Solution_Char_Limit__c</fullName>
    <description>Max characters of each solution body fed into the draft prompt (token-budget cap). Bodies longer than this are truncated before the prompt is assembled.</description>
    <label>Draft Solution Char Limit</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>