force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Draft_Verify_Model__c.field-meta.xml
<CustomField>
    <fullName>Draft_Verify_Model__c</fullName>
    <description>aiplatform.ModelsAPI modelName used for the second-model verification gate (Draft_Verify_Enabled__c). Deliberately a cheaper model than the drafting model - the gate only fires on cases that already reached a would-be draft. Blank falls back to the class default (sfdc_ai__DefaultOpenAIGPT4OmniMini). Point at the full drafting model if the cheaper judge proves unreliable.</description>
    <label>Draft Verify Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>