force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Drafting_Model_Name__c.field-meta.xml
<CustomField>
    <fullName>Drafting_Model_Name__c</fullName>
    <description>aiplatform.ModelsAPI modelName used for drafting (the stronger Trust-Boundary model). Change here to swap models without a code deploy. Blank falls back to the class default.</description>
    <label>Drafting Model Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>