force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Reply_From_Address__c.field-meta.xml
<CustomField>
    <fullName>Reply_From_Address__c</fullName>
    <description>Org-wide / verified email address used by Email-to-Case routing. Stamped onto the draft reply EmailMessage as BOTH FromAddress and ValidatedFromAddress. ValidatedFromAddress MUST match a verified Organization-Wide Email Address (or a verified address) or the eventual agent send fails. Change here to repoint the reply sender without a code deploy. Blank = no sender stamped (agent picks one in the composer).</description>
    <label>Reply From Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>