force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Retrieval_Cluster_Gap__c.field-meta.xml
<CustomField>
    <fullName>Retrieval_Cluster_Gap__c</fullName>
    <description>Adaptive-selection cluster gap (0-1): selection stops at the first relative score drop of at least this size from the previous kept candidate (the natural gap ending the strong cluster). Larger = keep more docs past a dip. Default 0.30 in code.</description>
    <label>Retrieval Cluster Gap</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>