force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Retrieval_Distill_Trigger_Score__c.field-meta.xml
<CustomField>
    <fullName>Retrieval_Distill_Trigger_Score__c</fullName>
    <description>Resilient retrieval fires the distillation second pass only when the first pass topScore is BELOW this value. Default 0.45 = the draft floor, so we distil exactly the cases that would otherwise not draft and never pay a call on a case that already has a strong match. Only used when Retrieval_Query_Distill_Enabled__c is true.</description>
    <label>Retrieval Distill Trigger Score</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>