force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Retrieval_Embedding_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Retrieval_Embedding_Enabled__c</fullName>
    <description>Master switch for the semantic (embedding cosine) re-rank in retrieval. Default false: retrieval stays callout-free and purely lexical. Set true ONLY after an approved embeddings model is confirmed in the org AND Embedding__c is backfilled, since enabling it makes one createEmbeddings callout per case.</description>
    <label>Retrieval Embedding Enabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>