force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Retrieval_Embedding_Model__c.field-meta.xml
<CustomField>
    <fullName>Retrieval_Embedding_Model__c</fullName>
    <description>aiplatform.ModelsAPI modelName used to embed the query for semantic re-rank. Must match the model used to generate Embedding__c at ingest (same model, comparable vector space). Blank falls back to the class default (sfdc_ai__DefaultOpenAITextEmbeddingAda_002, 1536-dim).</description>
    <label>Retrieval Embedding Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>