force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Retrieval_Embedding_Sim_Ceil__c.field-meta.xml
<CustomField>
    <fullName>Retrieval_Embedding_Sim_Ceil__c</fullName>
    <description>Raw cosine value mapped to 1 when rescaling the semantic signal to [0,1]. ada-002 strong matches sit around ~0.90. Default 0.90. Recalibrate from breakdown.semanticRaw against the eval set.</description>
    <label>Retrieval Embedding Sim Ceil</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>