force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Retrieval_Embedding_Sim_Floor__c.field-meta.xml
<CustomField>
    <fullName>Retrieval_Embedding_Sim_Floor__c</fullName>
    <description>Raw cosine value mapped to 0 when rescaling the semantic signal to [0,1]. ada-002 cosines compress into a high band (~0.70 for unrelated text), so a non-zero floor is required for the signal to discriminate. Default 0.70. Recalibrate from breakdown.semanticRaw against the eval set.</description>
    <label>Retrieval Embedding Sim Floor</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>