force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Retrieval_Embedding_Weight__c.field-meta.xml
<CustomField>
    <fullName>Retrieval_Embedding_Weight__c</fullName>
    <description>Blend weight w for the semantic signal in the final score: score = (1-w)*lexical + w*semantic. 0 = lexical only, 1 = semantic only. Default 0.55. Only applies when a doc has an embedding and the query embed succeeded; otherwise the score is pure lexical.</description>
    <label>Retrieval Embedding Weight</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>