force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Retrieval_Good_Match_Score__c.field-meta.xml
<CustomField>
    <fullName>Retrieval_Good_Match_Score__c</fullName>
    <description>The "no good match" threshold (0-1). Top candidate score at/above this counts as a good match; below it, retrieval reports no good match and the flow routes to a human.</description>
    <label>Retrieval Good Match Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>