force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Retrieval_Max_Candidates__c.field-meta.xml
<CustomField>
    <fullName>Retrieval_Max_Candidates__c</fullName>
    <description>Max ranked candidate solutions returned to the drafter (caps how many solutions are fed into generation to stay within token budget).</description>
    <label>Retrieval Max Candidates</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>