force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Retrieval_Medium_Match_Score__c.field-meta.xml
<CustomField>
    <fullName>Retrieval_Medium_Match_Score__c</fullName>
    <description>Lower bound (0-1) for a MEDIUM confidence signal. Between this and the good-match score the result is borderline; below it is LOW.</description>
    <label>Retrieval Medium Match Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>