force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Retrieval_Priority_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Retrieval_Priority_Enabled__c</fullName>
    <description>Master switch for the common-case priority layer (gate-then-weight): Common_Case__c docs that clear the gate get the priority weight in RRF fusion.</description>
    <label>Retrieval Priority Enabled</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>