force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Retrieval_Query_Distill_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Retrieval_Query_Distill_Enabled__c</fullName>
    <description>Master switch for resilient retrieval (SupportRetrievalService.retrieveResilient). When true, a first retrieval pass that comes back below Retrieval_Distill_Trigger_Score__c triggers ONE Models chat call that distils the raw case into a focused search query; retrieval re-runs on it and keeps whichever pass is stronger. Spends the extra call ONLY on cases that would otherwise miss the draft floor. Default false -> retrieveResilient behaves identically to retrieve (no extra callout). OPT-IN: leave off until the labeled eval shows the customer-phrasing gap closing without regressing other buckets.</description>
    <label>Retrieval Query Distill Enabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>