force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Retrieval_Query_Distill_Model__c.field-meta.xml
<CustomField>
    <fullName>Retrieval_Query_Distill_Model__c</fullName>
    <description>Models API model name used by retrieveResilient to distil a raw case into a search query. Any chat-capable Trust Layer model is fine (this is a cheap keyword-extraction call, not generation). Blank -> code default sfdc_ai__DefaultGPT4Omni. Only used when Retrieval_Query_Distill_Enabled__c is true.</description>
    <label>Retrieval Query Distill Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>