force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Retrieval_Select_Abs_Floor__c.field-meta.xml
<CustomField>
    <fullName>Retrieval_Select_Abs_Floor__c</fullName>
    <description>Adaptive-selection absolute floor (0-1): a candidate below the top is never included if it scores below this. Junk guardrail. Default 0.20 in code.</description>
    <label>Retrieval Select Abs Floor</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>