force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Retrieval_Select_Rel_Frac__c.field-meta.xml
<CustomField>
    <fullName>Retrieval_Select_Rel_Frac__c</fullName>
    <description>Adaptive-selection relative floor (0-1): a candidate below the top is included only if it scores at least this fraction of the top score. Lower = feed more corroborating docs to drafting. Default 0.60 in code.</description>
    <label>Retrieval Select Rel Frac</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>