force-app/main/default/objects/Support_Draft_Setting__mdt/fields/Retrieval_Tier2_Pool_Limit__c.field-meta.xml
<CustomField>
    <fullName>Retrieval_Tier2_Pool_Limit__c</fullName>
    <description>Max records a single retrieval SOSL returns (kept well under the SOSL 2,000-row cap).</description>
    <label>Retrieval Tier2 Pool Limit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>